--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -15,9 +15,9 @@
     <div class="intro">
       <!-- Left -->
       <div class="intro-left">
-        <h1>Hello, I'm Ghulam Mohiyu Ud Din</h1>
+        <h1>Hello, I'm <span>Ghulam Mohiyu Ud Din</span>👋</h1>
         <p>
-          I'm a software engineer with a passion for building web applications.
+          I'm a <span>software engineer</span> with a passion for building <span>web applications</span>.
         </p>
         <div class="social-icons">
           <a href="#"> <i class="fa-brands fa-facebook fa-2x"></i></a>
