--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -32,5 +32,24 @@
         <img src="pro.jpg" alt="" />
       </div>
     </div>
+    <!-- Education -->
+    <h1 class="projects-heading">Projects</h1>
+    <div class="Projects">
+      <div class="eachProject">
+        <img src="Home.png" alt="">
+        <h1>SkillBridge - Job Portal</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel, natus! Minus odit obcaecati excepturi veritatis unde esse voluptatum vel. Molestiae.</p>
+      </div>
+      <div class="eachProject">
+        <img src="Home.png" alt="">
+        <h1>SkillBridge - Job Portal</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel, natus! Minus odit obcaecati excepturi veritatis unde esse voluptatum vel. Molestiae.</p>
+      </div>
+      <div class="eachProject">
+        <img src="Home.png" alt="">
+        <h1>SkillBridge - Job Portal</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel, natus! Minus odit obcaecati excepturi veritatis unde esse voluptatum vel. Molestiae.</p>
+      </div>
+    </div>
   </body>
 </html>
