bulding Web Clone

--- a/WebClone/index.html
+++ b/WebClone/index.html
@@ -78,7 +78,7 @@
     <div class="featuresContainer">
       <div class="feature">
         <img
-          src="https://catherineisonline.github.io/news-homepage-frontendmentor/images//image-retro-pcs.jpg"
+          src="https://images.unsplash.com/photo-1550745165-9bc0b252726f?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8cmV0cm8lMjBjb21wdXRlcnxlbnwwfHwwfHx8MA%3D%3D"
         />
 
         <div class="feature-info">
@@ -90,7 +90,7 @@
 
       <div class="feature">
         <img
-          src="https://catherineisonline.github.io/news-homepage-frontendmentor/images/image-top-laptops.jpg"
+          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTDwOC6_XLG0gr4PCKqb1CzYd1SzD6yb39CkA&s"
         />
 
         <div class="feature-info">
@@ -102,7 +102,7 @@
 
       <div class="feature">
         <img
-          src="https://catherineisonline.github.io/news-homepage-frontendmentor/images/image-gaming-growth.jpg"
+          src="https://i.pinimg.com/564x/45/aa/ac/45aaac5ac2b62810a4e2e820de22e344.jpg"
         />
 
         <div class="feature-info">
