--- a/WebClone/index.html
+++ b/WebClone/index.html
@@ -77,7 +77,7 @@
     <!-- Features -->
     <div class="featuresContainer">
       <div class="feature">
-        <img
+        <img width="200px" height="100px"
           src="https://images.unsplash.com/photo-1550745165-9bc0b252726f?fm=jpg&q=60&w=3000&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8cmV0cm8lMjBjb21wdXRlcnxlbnwwfHwwfHx8MA%3D%3D"
         />
 
@@ -89,7 +89,7 @@
       </div>
 
       <div class="feature">
-        <img
+        <img width="200px" height="100px"
           src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTDwOC6_XLG0gr4PCKqb1CzYd1SzD6yb39CkA&s"
         />
 
@@ -101,7 +101,7 @@
       </div>
 
       <div class="feature">
-        <img
+        <img width="200px" height="100px"
           src="https://i.pinimg.com/564x/45/aa/ac/45aaac5ac2b62810a4e2e820de22e344.jpg"
         />
 
